--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
 </head>
 <body>
-    <h1>Venda de Grãos de Café</h1>
-    <p>Bem-vindo à nossa loja online de grãos de café!</p>
-    <h2>Produtos Disponíveis</h2>
+    <div class="titulo">
+        <h1>Venda de Grãos de Café</h1>
+        <p>Bem-vindo à nossa loja online de grãos de café!</p>
+        <h2>Produtos Disponíveis</h2>
+    </div>
 
     <section class="principal">
-        <div class="produto produto1">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -21,7 +23,7 @@
             </ul>
 
         </div>
-        <div class="produto produto2">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -31,7 +33,7 @@
             </ul>
 
         </div>
-        <div class="produto produto3">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -41,7 +43,7 @@
             </ul>
 
         </div>
-        <div class="produto produto4">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -51,7 +53,7 @@
             </ul>
 
         </div>
-        <div class="produto produto5">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -61,7 +63,7 @@
             </ul>
 
         </div>
-        <div class="produto produto6">
+        <div class="produto">
             <ul>
                 <li>
                     <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
@@ -72,9 +74,6 @@
 
         </div>
     </section>
-    
-
-
-    <footer>© 2023 Venda de Grãos de Café</footer>
 </body>
+    <footer>© 2023 Venda de Grãos de Café</footer>
 </html>
