--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 body {
     font-family: Arial, sans-serif;
     height: 95vh;
     margin: 0;
     display: flex;
-    flex-direction: column; /* Define um fluxo de coluna */
-    justify-content: flex-start; /* Alinhe a parte superior */
+    flex-direction: column; 
+    justify-content: flex-start; 
     align-items: center;
+    background-color: rgb(62, 67, 80);
 }
 
 .titulo {
@@ -14,6 +16,29 @@ body {
 
 h1 {
     color: #8B4513;
+}
+
+
+h3 {
+	font-weight: lighter;
+}
+
+p.descricao {
+    font-size: medium;
+    margin-top: 0px;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+}
+
+input[type="number"] {
+    width: 60px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
 
@@ -31,16 +56,70 @@ ul {
     width: 500px;
 }
 
-.produto1 {
-    background-color: blue;
-    width: 500px;
+#converter-popup {
+    display: none;
+    font-family: "Russo One", sans-serif;
+    background-color: #eaedeef5;
+    color: #365fa0;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    padding-bottom: 70px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.7);
 }
 
-.produto2 {
-    background-color: brown;
-    width: 500px;
+
+form.conversao_form {
+    margin: 0 auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px #365fa0;
+    max-width: 100%; 
+    border-radius: 5px;
+
 }
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #8B4513 #DFE9EB;
+}
+  
+*::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+}
+  
+*::-webkit-scrollbar-track:hover {
+    background-color: #B8C0C2;
+}
+  
+*::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+}
+  
+*::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #8B4513;
+}
+  
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #62A34B;
+}
+  
+*::-webkit-scrollbar-thumb:active {
+    background-color: #62A34B;
+}
+  
 footer {
     text-align: center;
 }
