--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Venda de Grãos de Café</title>
+    <title>Coffe Beans</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
 </head>
 
 <body>
     <div class="titulo">
-        <h1>Venda de Grãos de Café</h1>
-        <p>Bem-vindo à nossa loja online de grãos de café!</p>
-        <h2>Produtos Disponíveis</h2>
+        <h1>Coffee Beans</h1>
+        <p>Welcome to our online coffee bean store!</p>
+        <h2>Available Products</h2>
     </div>
 
     <section class="principal">
@@ -22,10 +23,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Café Arábica" width="250px">
                         <h3>Grão de Café Arábica - R$ 30,00/kg</h3>
-                        <p class="descricao">Sabor: Suave, com notas de frutas, nozes e chocolate</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_1" data_moeda="USD" data_preco="30.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Smooth, with notes of fruit, nuts and chocolate</p>
+                        <input type="number" id="quantidade1" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_1" data_moeda="USD" data_preco="30.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -39,10 +40,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Café Robusta" width="250px">
                         <h3>Grão de Café Robusta - R$ 25,00/kg</h3>
-                        <p class="descricao">Sabor: Forte e amargo, com notas terrosas</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_2" data_moeda="USD" data_preco="25.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Strong and bitter, with earthy notes</p>
+                        <input type="number" id="quantidade2" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_2" data_moeda="USD" data_preco="25.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -56,10 +57,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Café Kona" width="250px">
                         <h3>Grão de Café Kona - R$ 60,00/kg</h3>
-                        <p class="descricao">Sabor: Suave, com notas frutadas e florais</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_3" data_moeda="USD" data_preco="60.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Smooth, with fruity and floral notes</p>
+                        <input type="number" id="quantidade3" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_3" data_moeda="USD" data_preco="60.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -73,10 +74,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Blue Mountain" width="250px">
                         <h3>Grão de Café Blue Mountain - R$ 70,00/kg</h3>
-                        <p class="descricao">Sabor: Suave, com notas de nozes e frutas cítricas</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_4" data_moeda="USD" data_preco="70.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Smooth, with notes of nuts and citrus fruits</p>
+                        <input type="number" id="quantidade4" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_4" data_moeda="USD" data_preco="70.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -90,10 +91,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Café Bourbon" width="250px">
                         <h3>Grão de Café Bourbon - R$ 35,00/kg</h3>
-                        <p class="descricao">Sabor: Complexo, com notas de caramelo, frutas e especiarias</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_5" data_moeda="USD" data_preco="35.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Complex, with notes of caramel, fruits and spices</p>
+                        <input type="number" id="quantidade5" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_5" data_moeda="USD" data_preco="35.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -106,10 +107,10 @@
                     <li>
                         <img src="static/coffe.jpg" alt="Grão de Café Geisha" width="250px">
                         <h3>Grão de Café Geisha - R$ 80,00/kg</h3>
-                        <p class="descricao">Sabor: Floral, com notas de jasmim e frutas cítricas</p>
-                        <input type="number" id="quantidade" name="quantidade" min="1">
-                        <button type="submit">Adicionar ao Carrinho</button>
-                        <button id="open_converter_6" data_moeda="USD" data_preco="80.00">Converter Moeda</button>
+                        <p class="descricao">Taste: Floral, with notes of jasmine and citrus fruits</p>
+                        <input type="number" id="quantidade6" name="quantidade" min="1">
+                        <button type="submit">Add to Cart</button>
+                        <button id="open_converter_6" data_moeda="USD" data_preco="80.00">Convert Currency</button>
                     </li>
                 </ul>
             </form>
@@ -133,24 +134,27 @@
     </div>
     
     <script>
-        const openButtons = document.querySelectorAll('[id^="open_converter_"]');
-        const converterPopup = document.getElementById('converter-popup');
-        const valorInput = document.getElementById('valor');
-        openButtons.forEach((button, index) => {
-            button.addEventListener('click', () => {
-                const preco = parseFloat(button.getAttribute('data-preco'));
-
-                if (!isNaN(preco)) {
-                    valorInput.value = preco.toFixed(2);
-                    converterPopup.style.display = 'block';
-                } else {
-                    alert('Preço inválido para conversão.');
-                }
+        document.addEventListener('DOMContentLoaded', function() {
+            const openButtons = document.querySelectorAll('[id^="open_converter_"]');
+            const converterPopup = document.getElementById('converter-popup');
+            const valorInput = document.getElementById('valor');
+            openButtons.forEach((button, index) => {
+                button.addEventListener('click', () => {
+                    console.log('Botão clicado:', button); // Adicione esta linha para depuração
+                    const preco = parseFloat(button.getAttribute('data-preco'));
+                    console.log('Preço:', preco); // Adicione esta linha para depuração
+    
+                    if (!isNaN(preco)) {
+                        valorInput.value = preco.toFixed(2);
+                        converterPopup.style.display = 'block';
+                    } else {
+                        alert('Preço inválido para conversão.');
+                    }
+                });
             });
         });
-
-       
     </script>
+    
 </body>
-    <footer>© 2023 Venda de Grãos de Café</footer>
+    <footer>© 2023 Sale of Coffee Beans</footer>
 </html>
