--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,8 @@ body {
     flex-direction: column; 
     justify-content: flex-start; 
     align-items: center;
-    background-color: rgb(62, 67, 80);
+    background-color: rgba(138, 122, 150, 0.7); 
+
 }
 
 .titulo {
@@ -15,7 +16,13 @@ body {
 }
 
 h1 {
-    color: #8B4513;
+    font-family: "Russo One", sans-serif;
+    background: #25CC0F;
+    background: -webkit-linear-gradient(to bottom right, #25CC0F 0%, #9E3212 100%);
+    background: -moz-linear-gradient(to bottom right, #25CC0F 0%, #9E3212 100%);
+    background: linear-gradient(to bottom right, #25CC0F 0%, #9E3212 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 
